--- a/src/Enpal.CodingChallenge.Api/appsettings.json
+++ b/src/Enpal.CodingChallenge.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodingChallengeDb": "Host=localhost;Port=5432;Database=coding-challenge;Username=postgres;Password=mypassword123!;"
+  }
 }
